--- a/QuanLiLuanVan_ChinhThuc/QuanLiLuanVan_ChinhThuc.csproj
+++ b/QuanLiLuanVan_ChinhThuc/QuanLiLuanVan_ChinhThuc.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Bunifu_UI_v1.52">
-      <HintPath>..\..\..\..\Bunifu_UI_v1.52.dll</HintPath>
+      <HintPath>D:\Bunifu\Bunifu_UI_v1.52.dll</HintPath>
     </Reference>
     <Reference Include="FontAwesome.Sharp, Version=6.3.0.0, Culture=neutral, PublicKeyToken=d16d1e4e568ec10f, processorArchitecture=MSIL">
       <HintPath>..\packages\FontAwesome.Sharp.6.3.0\lib\net48\FontAwesome.Sharp.dll</HintPath>
@@ -309,6 +309,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GV\FormQuanLyDeTai.resx">
       <DependentUpon>FormQuanLyDeTai.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SV\childAddDangKi.resx">
+      <DependentUpon>childAddDangKi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SV\HomePage.resx">
       <DependentUpon>HomePage.cs</DependentUpon>
