--- a/QuanLiLuanVan_ChinhThuc/QuanLiLuanVan_ChinhThuc.csproj
+++ b/QuanLiLuanVan_ChinhThuc/QuanLiLuanVan_ChinhThuc.csproj
@@ -65,6 +65,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataStorage.cs" />
+    <Compile Include="fThemTask.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fThemTask.Designer.cs">
+      <DependentUpon>fThemTask.cs</DependentUpon>
+    </Compile>
     <Compile Include="GV\FormDuyet.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -140,6 +147,7 @@
     <Compile Include="Object\Nguoi.cs" />
     <Compile Include="Object\SinhVien.cs" />
     <Compile Include="Object\SinhVienDao.cs" />
+    <Compile Include="Object\TaskLV.cs" />
     <Compile Include="SV\HomePage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -231,6 +239,13 @@
     <Compile Include="Login\ucTaiKhoan.Designer.cs">
       <DependentUpon>ucTaiKhoan.cs</DependentUpon>
     </Compile>
+    <Compile Include="TaskDAO.cs" />
+    <Compile Include="ucTask.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ucTask.Designer.cs">
+      <DependentUpon>ucTask.cs</DependentUpon>
+    </Compile>
     <Compile Include="UC\UCdetaidk.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -280,6 +295,9 @@
       <DependentUpon>UCRowStudent.cs</DependentUpon>
     </Compile>
     <Compile Include="Login\UserInfo.cs" />
+    <EmbeddedResource Include="fThemTask.resx">
+      <DependentUpon>fThemTask.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GV\FormDuyet.resx">
       <DependentUpon>FormDuyet.cs</DependentUpon>
     </EmbeddedResource>
@@ -361,6 +379,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Login\ucTaiKhoan.resx">
       <DependentUpon>ucTaiKhoan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucTask.resx">
+      <DependentUpon>ucTask.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UC\UCdetaidk.resx">
       <DependentUpon>UCdetaidk.cs</DependentUpon>
