--- a/QuanLiLuanVan_ChinhThuc/QuanLiLuanVan_ChinhThuc.csproj
+++ b/QuanLiLuanVan_ChinhThuc/QuanLiLuanVan_ChinhThuc.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -12,6 +13,8 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -36,6 +39,12 @@
     <Reference Include="Bunifu_UI_v1.52">
       <HintPath>D:\Bunifu\Bunifu_UI_v1.52.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="FontAwesome.Sharp, Version=6.3.0.0, Culture=neutral, PublicKeyToken=d16d1e4e568ec10f, processorArchitecture=MSIL">
       <HintPath>..\packages\FontAwesome.Sharp.6.3.0\lib\net48\FontAwesome.Sharp.dll</HintPath>
     </Reference>
@@ -48,6 +57,7 @@
       <HintPath>..\packages\Siticone.Desktop.UI.2.1.1\lib\net40\Siticone.Desktop.UI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
     <Reference Include="System.Management" />
@@ -65,6 +75,36 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChatBox\FChatBoxTask.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChatBox\FChatBoxTask.Designer.cs">
+      <DependentUpon>FChatBoxTask.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ChatBox\ucImgLeft.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ChatBox\ucImgLeft.Designer.cs">
+      <DependentUpon>ucImgLeft.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ChatBox\ucImgRight.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ChatBox\ucImgRight.Designer.cs">
+      <DependentUpon>ucImgRight.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ChatBox\ucMessageLeft.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ChatBox\ucMessageLeft.Designer.cs">
+      <DependentUpon>ucMessageLeft.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ChatBox\ucMessageRight.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ChatBox\ucMessageRight.Designer.cs">
+      <DependentUpon>ucMessageRight.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataStorage.cs" />
     <Compile Include="fDSNhom.cs">
       <SubType>Form</SubType>
@@ -90,6 +130,12 @@
     <Compile Include="GV\fChamDiem.Designer.cs">
       <DependentUpon>fChamDiem.cs</DependentUpon>
     </Compile>
+    <Compile Include="GV\FChiTietLuanVan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GV\FChiTietLuanVan.Designer.cs">
+      <DependentUpon>FChiTietLuanVan.cs</DependentUpon>
+    </Compile>
     <Compile Include="GV\fListLichHen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,12 +154,6 @@
     <Compile Include="GV\FormQuanLyDuyet.Designer.cs">
       <DependentUpon>FormQuanLyDuyet.cs</DependentUpon>
     </Compile>
-    <Compile Include="GV\fThaoLuan.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GV\fThaoLuan.Designer.cs">
-      <DependentUpon>fThaoLuan.cs</DependentUpon>
-    </Compile>
     <Compile Include="Login\Admin.cs" />
     <Compile Include="Login\AdminDAO.cs" />
     <Compile Include="Login\DataProvider.cs" />
@@ -122,12 +162,6 @@
     </Compile>
     <Compile Include="Login\fAdmin.Designer.cs">
       <DependentUpon>fAdmin.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Login\fGetPass.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Login\fGetPass.Designer.cs">
-      <DependentUpon>fGetPass.cs</DependentUpon>
     </Compile>
     <Compile Include="Login\fLogin.cs">
       <SubType>Form</SubType>
@@ -160,8 +194,12 @@
     <Compile Include="GV\FormQuanLyDeTai.Designer.cs">
       <DependentUpon>FormQuanLyDeTai.cs</DependentUpon>
     </Compile>
+    <Compile Include="Object\Chat.cs" />
+    <Compile Include="Object\ChatDao.cs" />
+    <Compile Include="Object\Context.cs" />
     <Compile Include="Object\DiemLV.cs" />
     <Compile Include="Object\DiemLVDAO.cs" />
+    <Compile Include="Object\Duyet.cs" />
     <Compile Include="Object\GiaoVienDAO.cs" />
     <Compile Include="Object\DangKy.cs" />
     <Compile Include="Object\DangKyDao.cs" />
@@ -323,6 +361,21 @@
       <DependentUpon>UCRowStudent.cs</DependentUpon>
     </Compile>
     <Compile Include="Login\UserInfo.cs" />
+    <EmbeddedResource Include="ChatBox\FChatBoxTask.resx">
+      <DependentUpon>FChatBoxTask.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ChatBox\ucImgLeft.resx">
+      <DependentUpon>ucImgLeft.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ChatBox\ucImgRight.resx">
+      <DependentUpon>ucImgRight.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ChatBox\ucMessageLeft.resx">
+      <DependentUpon>ucMessageLeft.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ChatBox\ucMessageRight.resx">
+      <DependentUpon>ucMessageRight.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="fDSNhom.resx">
       <DependentUpon>fDSNhom.cs</DependentUpon>
     </EmbeddedResource>
@@ -335,6 +388,9 @@
     <EmbeddedResource Include="GV\fChamDiem.resx">
       <DependentUpon>fChamDiem.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GV\FChiTietLuanVan.resx">
+      <DependentUpon>FChiTietLuanVan.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GV\fListLichHen.resx">
       <DependentUpon>fListLichHen.cs</DependentUpon>
     </EmbeddedResource>
@@ -344,14 +400,8 @@
     <EmbeddedResource Include="GV\FormQuanLyDuyet.resx">
       <DependentUpon>FormQuanLyDuyet.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GV\fThaoLuan.resx">
-      <DependentUpon>fThaoLuan.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Login\fAdmin.resx">
       <DependentUpon>fAdmin.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Login\fGetPass.resx">
-      <DependentUpon>fGetPass.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login\fLogin.resx">
       <DependentUpon>fLogin.cs</DependentUpon>
@@ -516,6 +566,7 @@
     <None Include="Resources\icons8-management-50.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\user1.png" />
     <None Include="Resources\360_F_253516705_TdhWJkxcWVdmfFEJPDJ3blMds3Oqx1tH1.jpg" />
     <None Include="Resources\360_F_253516705_TdhWJkxcWVdmfFEJPDJ3blMds3Oqx1tH.jpg" />
     <None Include="Resources\icons8-student-50.png" />
@@ -532,4 +583,12 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
+  </Target>
+  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
 </Project>
