--- a/QuanLiLuanVan_ChinhThuc/packages.config
+++ b/QuanLiLuanVan_ChinhThuc/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="FontAwesome.Sharp" version="6.3.0" targetFramework="net48" />
   <package id="Guna.UI2.WinForms" version="2.0.4.6" targetFramework="net48" />
   <package id="Siticone.Desktop.UI" version="2.1.1" targetFramework="net48" />
